# Bonvenon

./: .gitignore  README.md  pyproject.toml  requirements.txt  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: biz1j95r5i17v7l171184jvnblys4sxq-source
.github/: pull_request_template.md
.github/workflows/: test.yml
src/config/: settings.py  urls.py
src/messaging/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
src/messaging/migrations/: 0001_initial.py  0002_message_user.py
src/posts/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/posts/migrations/: 0001_initial.py
src/users/: admin.py  models.py  serializers.py  tests.py  tokens.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_address_user_email_verified_user_helper_user_seeker_and_more.py  0003_rename_address_id_user_address_and_more.py  0004_rename_postel_code_address_postal_code.py  0005_alter_user_managers.py  0005_blacklistedtoken.py  0006_merge_0005_alter_user_managers_0005_blacklistedtoken.py  0007_delete_blacklistedtoken.py  0008_alter_user_email.py  0008_user_following.py  0009_alter_user_email.py  0010_alter_user_email.py  0011_alter_user_email.py  0012_alter_user_email.py  0013_merge_0008_user_following_0012_alter_user_email.py  0014_user_uid.py  0015_alter_user_uid.py
src/users/templates/users/: verify_email_message.html
