[project]
name = "bonvenon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.3",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.3.1",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "six>=1.16.0",
    "uvicorn>=0.32.0",
    "psycopg2-binary>=2.9.10",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.4",
    "django-extensions>=3.2.3",
    "ipython>=8.29.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
]
